# contrakit

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml
contrakit/: __init__.py  frame.py  observatory.py
contrakit/behavior/: _representation.py  agreement_api.py  behavior.py
docs/: all.md  behavior.md  contexts.md  convex_models.md  distribution.md  observatory.md  paper.md  space.md
docs/api/: README.md
docs/paper/: A Mathematical Theory of Contradiction.md  Appendix_A.md  Appendix_B.md  cheatsheet.md
docs/paper/axioms/: ablation.md  axioms.md
docs/paper/definitions/: 1_basic_definitions.md  2_proposition_product_structure.md  3_bhattacharyya_coefficient.md  4_agreement_measure_and_minimax_theorem.md  5_bounds_and_characterizations.md  6_duality_structure_and_optimal_strategies.md
examples/: README.md
examples/consensus/: README.md  run.py
examples/hallucinations/: README.md  run_all.py  terminal_output.txt
examples/hallucinations/experiment_1/: README.md  run.py
examples/hallucinations/experiment_10/: run.py
examples/hallucinations/experiment_11/: README.md  run.py
examples/hallucinations/experiment_2/: README.md
examples/hallucinations/experiment_3/: README.md
examples/info_theory/: run.py
examples/quantum/: CHSH.py  KCBS.py  README.md  magic_squares.py
scripts/: deploy_production.sh  generate_paper.py  test-pypi.dockerfile  test-pypi.sh
tests/: __init__.py  conftest.py  test_agreement.py  test_behavior.py  test_lens.py  test_mathematical_acceptance.py  test_observatory.py
(+119 files in other folders)
