[tool.poetry]
name = "contrakit"
version = "0.1.0"
description = "A Python toolkit for exploring contradictions and inconsistencies in data"
authors = ["Cassidy Bridges <cassidybridges@gmail.com>"]
readme = "README.md"
packages = [
    {include = "contrakit"}
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.0"
scipy = "^1.11.0"
matplotlib = "^3.10.6"
cvxpy = "^1.7.2"
scs = "^3.2.8"
qutip = "^5.2.1"
seaborn = "^0.13.2"
rich = "^13.0.0"
statsmodels = "^0.14.5"
dahuffman = "^0.4.2"
dit = "^1.5"
pyitlib = "^0.3.1"
sympy = "^1.14.0"
numba = "^0.61.2"
tqdm = "^4.67.1"
gplearn = "^0.4.2"
scikit-learn = "^1.3.0"
pycryptodome = "^3.20.0"
pulp = "^2.8.0"
matminer = "^0.9.3"
python-sat = "^1.8.dev22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.19"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
pdoc = "^15.0.4"
pdoc3 = "^0.11.6"
pandoc = "^2.4"
lazydocs = "^0.4.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
